# wavespeed-comfyui

./: .gitignore  .style.yapf  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml
examples/: flux-dev-lora-i2i.json  wan-t2v-lora.json
examples/case1-text-to-image/: case1-t2i.json
examples/case2-text-to-video/: case2-t2v.json
examples/case3-image-to-image/: case3-i2i.json
examples/case4-image-to-video/: case4-i2v.json
examples/case5-video-to-video/: case5-v2v.json
examples/case6-text-to-audio/: case6-t2a.json
examples/case7-image-to-3d/: case7-i23D.json
examples/case8-complex-pipeline/: case8-combination.json
py/: __init__.py  kwaivgi_kling_v1_6_i2v_pro.py  nodes.py  wavespeed_api.py  wavespeed_api_endpoints.py  wavespeed_api_utils.py  wavespeed_config.py  wavespeed_predictor.py  wavespeed_preview.py  wavespeed_preview_3d.py  wavespeed_preview_audio.py  wavespeed_preview_text.py
py/wavespeed_api/: client.py  utils.py
py/wavespeed_api/requests/: bytedance_seedance_v1_lite_i2v_1080p.py  bytedance_seedance_v1_lite_i2v_480p.py  bytedance_seedance_v1_lite_i2v_720p.py  bytedance_seedance_v1_lite_t2v_1080p.py  (+76 more)
web/: previewVideo.js  wavespeed_predictor.js  wavespeed_preview.js  wavespeed_preview_3d.js  wavespeed_preview_audio.js  wavespeed_preview_text.js  wavespeed_settings.js  wavespeed_video_preview.js
web/predictor/: FuzzyModelSelector.js  api.js  dom_widgets.js  inputs.js  media.js  parameters.js  sizeComponentWidget.js  utils.js  widgets.js  workflow.js
web/styles/: wavespeed-layout.css
